--- a/Server/In.Faux.Server.csproj
+++ b/Server/In.Faux.Server.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="System.Linq.Async.Queryable" Version="5.0.0" />
   </ItemGroup>
 
