--- a/BulkUploader.Console/appsettings.json
+++ b/BulkUploader.Console/appsettings.json
@@ -7,19 +7,10 @@
     }
   },
 
-  // Azure Key Vault settings
-  "KeyVault": {
+  // Azure settings
+  "Azure": {
     // URL to the Azure KeyVault.
-    "VaultUri": "https://[[redacted]].vault.azure.net/",
-
-    // Application (client) ID obtained via Azure 'App registrations'.
-    "ClientId": "[[redacted]]",
-
-    // Secret obtained when creating a entry under the Azure 'App registrations' 'Certificates & secrets' section.
-    "Secret": "[[redacted]]",
-
-    // Directory (tenant) ID obtained via Azure 'App registrations'.
-    "TenantId": "[[redacted]]"
+    "StorageConnectionString": "DefaultEndpointsProtocol=https;AccountName=[[AccountName]];AccountKey=[[AccountKey]];BlobEndpoint=https://[[AccountName]].blob.core.windows.net/;TableEndpoint=https://[[AccountName]].table.core.windows.net/;QueueEndpoint=https://[[AccountName]].queue.core.windows.net/;FileEndpoint=https://[[AccountName]].file.core.windows.net/"
   },
 
   // Settings for the quote flat file parser and image resizing.
