Modified projects to generate 'XML documentation file'.

--- a/Client/In.Faux.Client.csproj
+++ b/Client/In.Faux.Client.csproj
@@ -6,6 +6,10 @@
     <AssemblyName>Noftware.In.Faux.Client</AssemblyName>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Sync\Dev\Blazor\InFaux\Client\Noftware.In.Faux.Client.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BlazorPro.Spinkit" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web.Extensions" Version="5.0.0-preview9.20513.1" />
