--- a/Core/In.Faux.Core.csproj
+++ b/Core/In.Faux.Core.csproj
@@ -7,6 +7,10 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Sync\Dev\Blazor\InFaux\Core\Noftware.In.Faux.Core.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
