--- a/BulkUploader.Console/In.Faux.BulkUploader.Console.csproj
+++ b/BulkUploader.Console/In.Faux.BulkUploader.Console.csproj
@@ -7,6 +7,10 @@
     <AssemblyName>BulkUploader</AssemblyName>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Sync\Dev\Blazor\InFaux\BulkUploader.Console\BulkUploader.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
