--- a/Function/In.Faux.Function.csproj
+++ b/Function/In.Faux.Function.csproj
@@ -6,6 +6,9 @@
     <RootNamespace>Noftware.In.Faux.Function</RootNamespace>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Sync\Dev\Blazor\InFaux\Function\Noftware.In.Faux.Function.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.12" />
