--- a/Client/wwwroot/appsettings.json
+++ b/Client/wwwroot/appsettings.json
@@ -12,8 +12,8 @@
   "TimerRefreshSeconds": 7,
 
   // When querying for HTTP data from the controllers
-  "RequestRetries": 5,
+  "RequestRetries": 5
 
-  // Base address of the API (Azure Function).
-  "ApiBaseAddress": "http://localhost:7071/"
+  // Base address of the API (Azure Function). Leave commented-out for Azure Static Web Apps deployment.
+  //"ApiBaseAddress": "https://[[redacted]].azurewebsites.net"
 }
