--- a/Client/wwwroot/appsettings.json
+++ b/Client/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   // The name of the application as displayed in the UI.
-  "AppName": "Noftware In.Faux",
+  "AppName": "Noftware in.faux",
 
   // The name of quotes as displayed in the UI. This could be changed to anything that your entities represent (i.e. phrase, word, etc.)
   "TextName": "Quote",
@@ -12,8 +12,8 @@
   "TimerRefreshSeconds": 7,
 
   // When querying for HTTP data from the controllers
-  "RequestRetries": 5
+  "RequestRetries": 5,
 
   // Base address of the API (Azure Function). Leave commented-out for Azure Static Web Apps deployment.
-  //"ApiBaseAddress": "https://[[redacted]].azurewebsites.net"
+  "ApiBaseAddress": "http://localhost:7071"
 }
