--- a/Core/In.Faux.Core.csproj
+++ b/Core/In.Faux.Core.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>Noftware.In.Faux.Core</AssemblyName>
     <RootNamespace>Noftware.In.Faux.Core</RootNamespace>
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Sync\Dev\Blazor\InFaux\Core\Noftware.In.Faux.Core.xml</DocumentationFile>
+    <DocumentationFile>S:\Sync\Dev\Blazor\InFaux\Core\Noftware.In.Faux.Core.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.5.0" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.7.0" />
+    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.12.1" />
     <PackageReference Include="Dawn.ValueString" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
   </ItemGroup>
 </Project>
